fix: levelbar padding and spacing

--- a/src/scss/tainwind.scss
+++ b/src/scss/tainwind.scss
@@ -37,7 +37,7 @@ body {
 }
 
 .content-box {
-  @apply relative p-8 bg-gray-750 bg-opacity-80 rounded-xl;
+  @apply relative p-8 bg-gray-750 bg-opacity-80 rounded-xl shadow-xl;
 }
 
 .font-ibm {
